change css and js to html

--- a/flash.html
+++ b/flash.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.2.1.js"></script>
+    <script src="js/scripts.js"></script>
     <meta charset="utf-8">
     <title>Flashcard</title>
   </head>
@@ -8,73 +12,69 @@
     <h1>Learn JavaScript and jQuery!</h1>
 
     <h2>Terms and Concepts to learn:</h2>
-    <div class="initially-shown">
-      <p>JavaScript(JS)</p>
+    <div class="javacript-shown">
+      <button>JavaScript(JS)</button>
     </div>
-    <div class="initially-hidden">
+    <div class="javascript-hidden">
       <h3>JavaScript(JS)</h3>
       <p>lasjfalkdjfalksdjfjsdfj</p>
     </div>
 
-    <div class="initially-shown">
-      <p>Operator</p>
+    <div class="operator-shown">
+      <button>Operator</button>
     </div>
-    <div class="initially-hidden">
+    <div class="operator-hidden">
       <h3>Operator</h3>
       <p>lkajsdflkajsf;laskjf</p>
     </div>
 
-    <div class="initially-shown">
-      <p>Variable </p>
+    <div class="variable-shown">
+      <button>Variable</button>
     </div>
-    <div class="initially-hidden">
+    <div class="variable-hidden">
       <h3>Variables</h3>
       <p>lkajdfl;kadjsfkadsj</p>
     </div>
 
-    <div class="initially-shown">
-      <p>Variable naming convention</p>
+    <div class="naming-shown">
+      <button>Variable naming convention</button>
     </div>
-    <div class="initially-hidden">
+    <div class="naming-hidden">
       <h3>Variable naming convention</h3>
       <p>alkjsdf;laksjdflakjsdf</p>
     </div>
 
-    <div class="initially-shown">
-      <p>Functions</p>
+    <div class="function-shown">
+      <button>Functions</button>
     </div>
-    <div class="initially-hidden">
+    <div class="function-hidden">
       <h3>Functions</h3>
       <p>kajdfl;kajdfla;kjsdf</p>
     </div>
 
-    <div class="initially-shown">
-      <p>Methods</p>
+    <div class="methods-shown">
+      <button>Methods</button>
     </div>
-    <div class="initially-hidden">
+    <div class="methods-hidden">
       <h3>Methods</h3>
       <p>lakdjsfl;ajksdflakjsd</p>
     </div>
 
-    <div class="initially-showing">
-      <p>Arguments</p>
+    <div class="arguments-showing">
+      <button>Arguments</button>
     </div>
-    <div class="initially-hidden">
+    <div class="arguments-hidden">
       <h3>Arguments</h3>
-    </div>
-
-    <div class="initially-showing">
-      <p>Parameters</p>
-    </div>
-    <div class="initially-hidden">
-      <h3>Parameters</h3>
       <p>lakjdf;alskjdfakdsjflj</p>
     </div>
 
-    <ul>
-      <li>Andrew</li>
-      <ul>
-        <li>Dogs</li>
+    <div class="parameters-showing">
+      <button>Parameters</button>
+    </div>
+    <div class="parameters-hidden">
+      <h3>Parameters</h3>
+      <p>lakjdf;alskjdfakdsjflj</p>
+    </div>
 
   </body>
 </html>
