add definitons to vocab words, add CSS style to h1, buttons, and h3

--- a/flash.html
+++ b/flash.html
@@ -9,72 +9,73 @@
     <title>Flashcard</title>
   </head>
   <body>
-    <h1>Learn JavaScript and jQuery!</h1>
+    <div class="container">
+      <h1>Learn JavaScript and jQuery!</h1>
 
-    <h2>Terms and Concepts to learn:</h2>
-    <div class="javacript-shown">
-      <button>JavaScript(JS)</button>
-    </div>
-    <div class="javascript-hidden">
-      <h3>JavaScript(JS)</h3>
-      <p>lasjfalkdjfalksdjfjsdfj</p>
-    </div>
+      <h2>Terms and Concepts to learn:</h2>
+      <div class="javacript-shown">
+        <button>JavaScript(JS)</button>
+      </div>
+      <div class="javascript-hidden">
+        <h3>JavaScript(JS)</h3>
+        <p>an object-oriented computer programming language commonly used to create interactive effects within web browsers.</p>
+      </div>
 
-    <div class="operator-shown">
-      <button>Operator</button>
-    </div>
-    <div class="operator-hidden">
-      <h3>Operator</h3>
-      <p>lkajsdflkajsf;laskjf</p>
-    </div>
+      <div class="operator-shown">
+        <button>Operator</button>
+      </div>
+      <div class="operator-hidden">
+        <h3>Operator</h3>
+        <p>arithmetic symbols to perform arithmetic on numbers and variables.</p>
+      </div>
 
-    <div class="variable-shown">
-      <button>Variable</button>
-    </div>
-    <div class="variable-hidden">
-      <h3>Variables</h3>
-      <p>lkajdfl;kadjsfkadsj</p>
-    </div>
+      <div class="variable-shown">
+        <button>Variable</button>
+      </div>
+      <div class="variable-hidden">
+        <h3>Variables</h3>
+        <p>Variables are assigned to strings, numbers, etc. to refer back to the data.</p>
+      </div>
 
-    <div class="naming-shown">
-      <button>Variable naming convention</button>
-    </div>
-    <div class="naming-hidden">
-      <h3>Variable naming convention</h3>
-      <p>alkjsdf;laksjdflakjsdf</p>
-    </div>
+      <div class="naming-shown">
+        <button>Variable naming convention</button>
+      </div>
+      <div class="naming-hidden">
+        <h3>Variable naming convention</h3>
+        <p>Can use letters, certain symbols (#, _, -), camelCase.</p>
+      </div>
 
-    <div class="function-shown">
-      <button>Functions</button>
-    </div>
-    <div class="function-hidden">
-      <h3>Functions</h3>
-      <p>kajdfl;kajdfla;kjsdf</p>
-    </div>
+      <div class="function-shown">
+        <button>Functions</button>
+      </div>
+      <div class="function-hidden">
+        <h3>Functions</h3>
+        <p>Nested action(s) within { } that can be called and "saved for later use."</p>
+      </div>
 
-    <div class="methods-shown">
-      <button>Methods</button>
-    </div>
-    <div class="methods-hidden">
-      <h3>Methods</h3>
-      <p>lakdjsfl;ajksdflakjsd</p>
-    </div>
+      <div class="methods-shown">
+        <button>Methods</button>
+      </div>
+      <div class="methods-hidden">
+        <h3>Methods</h3>
+        <p>Actions that can be performed on objects. It is a property that contains a function definition.</p>
+      </div>
 
-    <div class="arguments-showing">
-      <button>Arguments</button>
-    </div>
-    <div class="arguments-hidden">
-      <h3>Arguments</h3>
-      <p>lakjdf;alskjdfakdsjflj</p>
-    </div>
+      <div class="arguments-shown">
+        <button>Arguments</button>
+      </div>
+      <div class="arguments-hidden">
+        <h3>Arguments</h3>
+        <p>Content that replaces the parameter when calling the function.</p>
+      </div>
 
-    <div class="parameters-showing">
-      <button>Parameters</button>
+      <div class="parameters-shown">
+        <button>Parameters</button>
+      </div>
+      <div class="parameters-hidden">
+        <h3>Parameters</h3>
+        <p>What is initially defined in the function(inHere).</p>
+      </div>
     </div>
-    <div class="parameters-hidden">
-      <h3>Parameters</h3>
-      <p>lakjdf;alskjdfakdsjflj</p>
-    </div>
-
   </body>
 </html>
